--- a/style.css
+++ b/style.css
@@ -16,17 +16,14 @@
     --verdebotao: #04FC4C;
 }
 
-body {
-
-}
-
 header {
     background-image: url(imagens/bg01-metodoi15.webp);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
-    padding: 100px 500px 100px 20px;
+    padding-top: 150px;
+    padding-bottom: 150px;
 }
 
 section {
@@ -80,11 +77,18 @@ header a {
     border-width: 0 0 4px;
     border-color: #6400b1;
     border-radius: 50px;
-    padding: 15px 30px;
     text-decoration: none;
+    padding: 15px 20px;
 }
 
-header div {
+#divheader {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 920px;
+}
+
+#botaoheader {
     margin-top: 30px;
 }
 
@@ -92,13 +96,17 @@ section h2 {
     color: #fda523;
 }
 
+section.whatis {
+    max-width: 920px;
+    margin-right: auto;
+    margin-left: auto;
+    position: relative;
+}
+
 #whatis {
     display: flex;
     justify-content: center;
-}
-
-div#whatis-bloco01 {
-    margin: auto;
+    align-items: center;
 }
 
 section.noticia {
@@ -110,27 +118,70 @@ section.noticia {
 
 section img#noticia {
     border-radius: 20px;
-    max-width: 800px;
+    max-width: 750px;
     margin: 20px 0px 20px 0px;
 }
 
-section.deps01 {
+div#noticia {
+    position: relative;
+    max-width: 920px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.deps01 {
+    text-align: center;
     background-image: url(imagens/bg03-metodoi15.webp);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    text-align: center;
 }
 
-div#deps01 {
+
+.deps01 img {
+    max-width: 100%;
+    object-fit: cover;
+}
+
+#deps01 {
+    position: relative;
+    max-width: 920px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#deps01-bloco01 {
     display: flex;
-    columns: 3;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+#deps01-bloco02 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+div#deps01 img {
+    border-radius: 20px;
+    box-shadow: 8px 6px 15px #00000036;
 }
 
 .pilares {
     background-color: #2C0D48;
     color: white;
     text-align: center;
+}
+
+#pilares {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 920px;
 }
 
 section.pilares h3 {
@@ -145,18 +196,25 @@ section.pilares h3 {
     text-align: center;
 }
 
-#entendendosobre-block01 {
-    display: flex;
-    columns: 3;
-    justify-content: center;
-    width: 100%;
+#entendendosobre {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 920px;
 }
 
-#entendendosobre-block02 {
+#entendendosobre-bloco01 {
+    margin-top: 20px;
     display: flex;
-    columns: 2;
+    gap: 20px;
     justify-content: center;
-    width: 100%;
+}
+
+#entendendosobre-bloco02 {
+    margin-top: 20px;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
 }
 
 .sobre {
@@ -169,6 +227,10 @@ section.pilares h3 {
 #sobre {
     display: flex;
     columns: 2;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 920px;
 }
 
 div#sobre-bloco02 {
@@ -193,9 +255,20 @@ section.list15d h2 {
     color: #7e00e0;
 }
 
+li {
+    margin-top: 20px;
+}
+
 .bonus {
     background-color: var(--amarelo);
     text-align: center;
+}
+
+#bonus {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 920px;
 }
 
 section.bonus h2 {
@@ -206,6 +279,17 @@ section.bonus h2 {
     background-color: #2C0D48;
     color: white;
     text-align: center;
+}
+
+div#pricing {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 920px;
+}
+
+#arrow-down {
+    width: 20px;
 }
 
 section.pricing h2 {
@@ -245,6 +329,20 @@ section.pricing img#comprasegura {
 
 #maispresente {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 920px;
+}
+
+#maispresente-bloco01 {
+    margin: 30px;
+}
+
+#maispresente-bloco02 {
+    margin: 30px;
 }
 
 section.maispresente h2 {
@@ -258,12 +356,22 @@ section.maispresente h2 {
 
 #maisdep-bloco01 {
     display: flex;
-    columns: 3;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
 }
 
 #maisdep-bloco02 {
     display: flex;
-    columns: 3;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+section.maisdep img {
+    border-radius: 20px;
 }
 
 .garantee {
@@ -272,6 +380,17 @@ section.maispresente h2 {
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
+}
+
+#garantee {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 920px;
+}
+
+#garantee-bloco-01 {
+    margin: auto;
 }
 
 #garantee {
